[package]
name = "pizzaverse-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
ran = { version = "1.0.1" }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["sqlite_pool"]